# tdupes

./: .gitignore  LICENSE  README.md  prompt.txt  pyproject.toml
.github/workflows/: publish.yml
tdupes/: __init__.py  __main__.py
tdupes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_tdupes.py
