[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdupes"
version = "0.3.0"
description = "Find and manage duplicate files using fdupes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Utilities",
    "Topic :: System :: Filesystems",
]
keywords = ["duplicates", "fdupes", "deduplication", "files"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]


[project.urls]
Homepage = "https://github.com/samsy/tdupes"

[project.scripts]
tdupes = "tdupes.__main__:entry_point"

[tool.setuptools.packages.find]
where = ["."]
include = ["tdupes*"]
